--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Miyazaki Progrmações </title>
     <script>
-        alert("Bem vindo, ao site do Miyazaki")
-        document.write ("Programado inteiramente por Miyazaki")
-        console.log("Miyazaki é programista")
+       //alert("Bem vindo, ao site do Miyazaki")
+        //document.write ("Programado inteiramente por Miyazaki")
+        //console.log("Miyazaki é programista")
+        function alo(){
+            alert ("Miyazaki Programador")
+        }
     </script>
 </head>
 <body>
-    <button> Clique aqui </button>
+    <button onclick="alo()"> Clique aqui </button>
 </body>
 </html>
