--- a/index.html
+++ b/index.html
@@ -5,16 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Miyazaki Progrmações </title>
-    <script>
-       //alert("Bem vindo, ao site do Miyazaki")
-        //document.write ("Programado inteiramente por Miyazaki")
-        //console.log("Miyazaki é programista")
-        function alo(){
-            alert ("Miyazaki Programador")
-        }
-    </script>
+    <script src="estudo.js"></script>
 </head>
 <body>
-    <button onclick="alo()"> Clique aqui </button>
+    <button onclick="escreva()"> Clique aqui </button>
 </body>
 </html>
