--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <button onclick="escreva()"> Clique aqui </button>
+    <button onclick="minhaTabuada()"> Tabuada </button>
 </body>
 </html>
