--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt_br">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Miyazaki Progrmações </title>
+    <title>Primeiro A</title>
     <script src="estudo.js"></script>
 </head>
 <body>
-    <button onclick="escreva()"> Clique aqui </button>
-    <button onclick="minhaTabuada()"> Tabuada </button>
+
+   Valor: <input id="valor" type="text"><br>
+   Juros(Mensais): <input id="juros" type="text"><br>
+   Nr. Meses: <input id="meses" type="text"><br>
+   <button onclick="total()">Enviar</button>
+
 </body>
 </html>
