--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
    Nr. Meses: <input id="meses" type="text"><br>
    <button onclick="total()">Enviar</button>
 
+ <br> <br> <br> <br> 
+
+Valor 1: <input id='v1' type="text"><br>
+<button onclick="calcula (+)"> Soma </button>
+
+Valor 2: <input id='v2' type="text"><br><br>
+<button onclick="operacao()"> Calcule </button><br><br>
+<span id="resutaldo"> 0.00 </span> <br><br>
+
 </body>
 </html>
