--- a/index.html
+++ b/index.html
@@ -4,24 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro A</title>
+    <title>Audrey</title>
     <script src="estudo.js"></script>
+
 </head>
 <body>
+   
+   Capital: <input id="valor" type="text"><br>
+   Juros (mensais): <input id="juros" type="text"><br>
+   <button onclick="calcula()"> Enviar </button>
 
-   Valor: <input id="valor" type="text"><br>
-   Juros(Mensais): <input id="juros" type="text"><br>
-   Nr. Meses: <input id="meses" type="text"><br>
-   <button onclick="total()">Enviar</button>
 
- <br> <br> <br> <br> 
+   <br><br><br><br>
+Valor 1: <input id="v1" type="text"><br> 
+<button onclick="operacao('+')">Soma</button>
+<button onclick="operacao('-')">Subtrair</button>
+<button onclick="operacao('*')">Multiplicar</button>
+<button onclick="operacao('/')">Dividir</button>
+<br>
+Valor 2: <input id="v2" type="text"><br> 
+<button onclick="calcule()">Calcule</button><br><br>
+<span id="resultado">0,00</span>
+<br>
 
-Valor 1: <input id='v1' type="text"><br>
-<button onclick="calcula (+)"> Soma </button>
 
-Valor 2: <input id='v2' type="text"><br><br>
-<button onclick="operacao()"> Calcule </button><br><br>
-<span id="resutaldo"> 0.00 </span> <br><br>
 
 </body>
 </html>
