--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joao Lucas Miyazaki</title>
+    <title>Miyazaki</title>
   <script src="estudo.js"></script>
   <link rel="stylesheet" href="geral.css">
 </head>
 
 <body>
+
+   <div class="aprendendo">
+     <input id="raiz" readonly  type="text"><br> 
+    <button onclick="calculaESG()">Calcula</button>
+   </div>
+
+
+  <input type="checkbox"  id="calcfin">
 <div class="calculadora">
+<label for="calcfin"><h3>financeira</h3> </label>
+
   <div id="sptotal">
     <span id="total">R$ 0,00</span>
   </div>
